@@ -92,6 +92,12 @@ CB_FLAG_NQ (1, "callfh", 9,
 	_("  -fcallfh=<name>       specifies <name> to be used for I/O\n"
 	  "                        as external provided EXTFH interface module"))
 
+CB_FLAG_NQ (1, "ebcdic-table", 14, /* cf cconv.h for all available tables */
+	_("  -febcdic-table=[DEFAULT|RESTRICTED-GC|GCOS]\tdefine EBCDIC translation table:\n"
+	  "                        * default: MF-specific translation to extended ASCII\n"
+	  "                        * restricted-gc: translation to restricted ASCII\n"
+	  "                        * gcos: GCOS-specific translation to extended ASCII"))
+
 /* Binary flags */
 
 /* Flags with suppressed help */
@@ -102,9 +108,6 @@ CB_FLAG (cb_flag_winmain, 0, "winmain",
 
 CB_FLAG (cb_flag_computed_goto, 0, "computed-goto",
 	_("  -fcomputed-goto       generate computed goto C statements"))
-
-CB_FLAG (cb_flag_alt_ebcdic, 0, "alternate-ebcdic",
-	_("  -falternate-ebcdic    use restricted ASCII to EBCDIC translate"))
 
 CB_FLAG (cb_flag_extra_brace, 0, "extra-brace",
 	_("  -fextra-brace         generate extra braces in C source"))
