@@ -3,6 +3,8 @@
 
 	* codegen.c, cconv.h, cconv.c: extract EBCDIC & ASCII conversion tables
 	  to a dedicated module
+	* flag.def: add -febcdic-table flag to customize EBCDIC translation;
+	  drop -falernate-ebcdic (replaced by -febcdic-table=restricted-gc)
 
 2022-09-30  Simon Sobisch <simonsobisch@gnu.org>
 
